# butterfly

./: .gitignore  AUTHORS  README  Readme.txt  cloud.c  cloud.h  config.h  configure.ac  display_init.c  display_init.h  ebullet.c  eclass.c  enemy.h  game.h  globvars.h  input.c  main.c  menu.h  palette.h  sound.c
data/: Makefile.am  init.txt
src/: Makefile.am  butterfly.rc  cloud.c  cloud.h  config.h  display.c  display.h  display_init.c  display_init.h  ebullet.c  ebullet.h  eclass.c  enemy.c  enemy.h  game.c  game.h  globvars.h  input.c  input.h  level.c  level.h  main.c  menu.c  menu.h  palette.c  palette.h  pbullet.c  pbullet.h  sound.c  sound.h  stuff.c  stuff.h
