gardendir=@DATADIR_NAME@

NUL = 

nobase_dist_garden_DATA = init.txt

# wavsdir=$(gardendir)/wavs
nobase_dist_garden_DATA += \
	wavs/bang1.wav \
	wavs/bang2.wav \
	wavs/bang3.wav \
	wavs/bang4.wav \
	wavs/beam1.wav \
	wavs/beam2.wav \
	wavs/beam3.wav \
	wavs/blip.wav \
	wavs/bomb.wav \
	wavs/charge.wav \
	wavs/chirp.wav \
	wavs/double.wav \
	wavs/fire.wav \
	wavs/highzap.wav \
	wavs/inter.wav \
	wavs/kill.wav \
	wavs/level.wav \
	wavs/robot.wav \
	wavs/shot2.wav \
	wavs/shot.wav \
	wavs/sweep.wav \
	$(NUL)

# beatdir=$(gardendir)/beat
nobase_dist_garden_DATA += \
	beat/acc.wav \
	beat/arp2.wav \
	beat/arp3.wav \
	beat/arp_long.wav \
	beat/arp.wav \
	beat/beep2.wav \
	beat/beep.wav \
	beat/clar2.wav \
	beat/clar.wav \
	beat/flute2.wav \
	beat/flute3.wav \
	beat/flute.wav \
	beat/fun0.wav \
	beat/fun2.wav \
	beat/fun3.wav \
	beat/fun.wav \
	beat/high.wav \
	beat/low1.wav \
	beat/low2.wav \
	beat/melo2.wav \
	beat/melo3.wav \
	beat/melo.wav \
	beat/organ.wav \
	beat/warm2.wav \
	beat/warm3.wav \
	beat/warm4.wav \
	beat/warmup1.wav \
	beat/warmup2.wav \
	beat/warmup3.wav \
	beat/warmup4.wav \
	beat/warm.wav \
	beat/zone1.wav \
	beat/zone2.wav \
	beat/zone3.wav \
	$(NUL)

# gfxdir=$(gardendir)/gfx
nobase_dist_garden_DATA += \
	gfx/garden.dat \
	gfx/large2.bmp \
	gfx/large.bmp \
	gfx/player.bmp \
	gfx/small.bmp \
	gfx/white.bmp \
	$(NUL)
